# aws-samples

./: .gitignore  README.md
auth-cognito/: .gitignore  README.md  go.mod  go.sum  package.json  serverless.yml
aws-cdk-go-lambda-template/: .gitignore  README.md
aws-cdk-python-lambdaurl-template/: README.md
cdk-examples/: .gitignore  Makefile  app.py  cdk.json  pyproject.toml
cdk-examples/infrastructure/: component.py  constants.py  monitoring.py  utils.py
cdk-examples/infrastructure/input_validation/: construct.py
cdk-examples/infrastructure/lambda_layers/: construct.py
cdk-examples/infrastructure/multi_layers/: construct.py
cdk-examples/infrastructure/simple_lambda/: construct.py
cdk-examples/service/handlers/: input_validation.py  multi_layers.py  settings.py  simple_lambda.py
cdk-examples/service/models/: input_event.py
cdk-examples/tests/: utils.py
cdk-examples/tests/infrastructure/: test_cdk_simple_lambda.py
cdk-examples/tests/service/: test_input_validation.py  test_multi_layers.py  test_simple_lambda_function.py
cdklambdatemplate/: Makefile  README.md
media/: Makefile  README.md  go.mod  go.sum  package-lock.json  package.json  serverless.yml  swagger.yaml
ticket-routing/: .gitignore  Makefile  README.md  app.py  pyproject.toml  rest.http
ticket-routing/infrastructure/: component.py  constants.py  lambdas.py
ticket-routing/service/handlers/: authorizer.py  tickets.py
ticket-routing/service/handlers/processors/: analytics.py  general_channel.py  priority_channel.py
ticket-routing/tests/service/: test_base_lambda_function.py
(+38 files in other folders)
